Resolve "[All tabs] Boutons Enregistrer et Annuler toujours visibles"

--- a/frontend/app/zh-forms/tabs/tab3/zh-form-tab3.component.scss
+++ b/frontend/app/zh-forms/tabs/tab3/zh-form-tab3.component.scss
@@ -2,12 +2,6 @@
 .backToLigne {
   white-space: pre;
 }
-.footer-btn {
-  display: flex;
-  justify-content: flex-end;
-  margin-top: 36px;
-  margin-bottom: 36px;
-}
 
 select.activities-select option:disabled {
   color: #d9d9d9;
